--- a/index.html
+++ b/index.html
@@ -21,11 +21,28 @@
                 <li>
                     <a href="#">header link two</a>
                 </li>
-                
+
                 <li>
                     <a href="#">header link three</a>
                 </li>
             </ul>
+        </div>
+    </div>
+
+    <div class="hero">
+        <div class="hero-content">
+            <div class="hero-title">
+                This website is awesome
+            </div>
+            <div class="hero-text">
+                This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
+            </div>
+            <button>Sign up</button>
+        </div>    
+        
+
+        <div class="hero-image">
+            <img src="./images/cat.jpg" alt="Cat in grass" width="300px" height="300px">
         </div>
     </div>
 </body>
