Add information part

--- a/index.html
+++ b/index.html
@@ -45,5 +45,29 @@
             <img src="./images/cat.jpg" alt="Cat in grass" width="300px" height="300px">
         </div>
     </div>
+
+    <div class="info-container">
+        <div class="information">
+            Some random information.
+        </div>
+        <div class="box-container">
+            <div class="box">
+                <img src="./images/fox.jpg" alt="Picture of fox" width="200px" height="200px">
+                <div>Lorem ipsum dolor sit amet consectetur adipisicing.</div>
+            </div>
+            <div class="box">
+                <img src="./images/racoon.jpg" alt="Picture of racoon" width="200px" height="200px">
+                <div>Lorem ipsum dolor sit amet consectetur adipisicing.</div>
+            </div>
+            <div class="box">
+                <img src="./images/squirrel.jpg" alt="Picture of squirrel" width="200px" height="200px">
+                <div>Lorem ipsum dolor sit amet consectetur adipisicing.</div>
+            </div>
+            <div class="box">
+                <img src="./images/turtle.jpg" alt="Picture of turtle" width="200px" height="200px">
+                <div>Lorem ipsum dolor sit amet consectetur adipisicing.</div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
