Add quote section

--- a/index.html
+++ b/index.html
@@ -69,5 +69,16 @@
             </div>
         </div>
     </div>
+    
+    <div class="quote">
+        <div class="quote-container">
+            <div class="quote-text">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo, error corporis? Saepe in molestiae, expedita possimus dolorum unde et cum ad neque doloremque placeat officia quasi nisi, excepturi sunt deleniti.
+            </div>
+            <div class="quote-author">
+                -David Trivic
+            </div>
+        </div>
+    </div>
 </body>
 </html>
