Add sign up section

--- a/index.html
+++ b/index.html
@@ -80,5 +80,17 @@
             </div>
         </div>
     </div>
+
+    <div class="signup">
+        <div class="signup-container">
+            <div class="signup-text-container">
+                <div class="signup-title">Call to action! It's time!</div>
+                <div class="signup-text">Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <div class="button-container">
+                <button>Sign Up</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
