--- a/index.html
+++ b/index.html
@@ -92,5 +92,9 @@
             </div>
         </div>
     </div>
+
+    <div class="footer">
+        Copyright &#169 The Odin Project 2021
+    </div>
 </body>
 </html>
